Fix bencharks Add a more general one, where segment size is not constant